[project]
name = "hermes-otel-exporter"
version = "0.1.0"
description = "Exports Hermes session/LLM/tool metrics, logs, and traces to a local OpenTelemetry Collector (Prometheus + Loki + Tempo/Grafana stack)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "spow12" }]
license = { text = "MIT" }
keywords = ["opentelemetry", "observability", "hermes", "agent", "tracing"]

# OTel core + gRPC exporter must release in lockstep — leave a range and let
# `uv lock` resolve the consistent set. Pinned to 1.x to avoid a surprise
# 2.x major bump. Regenerate uv.lock to intentionally bump within the range.
dependencies = [
    "opentelemetry-api>=1.39,<2",
    "opentelemetry-sdk>=1.39,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39,<2",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_otel_exporter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--import-mode=importlib", "-ra"]
filterwarnings = [
    # opentelemetry-sdk 1.42 warns about its own deprecated LoggingHandler.
    "ignore::DeprecationWarning:opentelemetry.sdk._logs._internal",
]
